# test_cmake

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: arm64-v8a-toolchain.cmake  armeabi-v7a-toolchain.cmake)
jni/src/: native-lib.cpp
jni/src/include/: native-lib.h
